# copper

./: .travis.yml  Cargo.toml  README.md  deploy.sh  tree.txt
docs/: README.md
src/: main.rs  shell_trait.rs
src/input/: factory.rs  from_file.rs  from_stdin.rs  input_trait.rs  mod.rs
src/output/: .html_generator.rs.swp  console.rs  factory.rs  html_generator.rs  mod.rs  output_trait.rs
src/processors/: get_test_lines.rs  individual_test_results.rs  mod.rs  process_for_individual_test_results.rs  processing_controller.rs  string_utils.rs  test_set.rs  types.rs
src/shell/: browser.rs  console.rs  console_browser.rs  factory.rs  mod.rs  shell_trait.rs
src/templates/: index.html
src/tests/: doc_tests.rs  failing.rs  mod.rs  passing.rs
src/utils/: environment.rs  file_utils.rs  logger.rs  macros.rs  mod.rs  random.rs  string_utils.rs
tests/: failing_integration_tests.rs  ignored_integration_tests.rs  passing_integration_tests.rs
