[package]
name = "copper"
version = "0.1.0"
authors = ["matt raffel <matt.raffel@evernym.com>"]

[dependencies]
ansi_term = "0.11.0"
env_logger = "0.5.10"
lazy_static = "0.2"
libc = "0.2.21"
log = "0.4.1"
preferences = "1.1.0"
open = "1.2.1"
rand = "0.4.2"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.20"
tera = "0.11.7"