[package]
name = "copper"
version = "0.1.1"
description = "provides a pretty UI to cargo test output"
authors = ["matt raffel <matt.raffel@evernym.com>"]
categories = ["development-tools", "development-tools::build-utils", "command-line-utilities"]
license = "MIT/Apache"

[badges]
travis-ci = { repository = "https://github.com/mattraffel/copper.git", branch = "master" }

[features]
generate=[]

[dependencies]
ansi_term = "0.11.0"
env_logger = "0.5.10"
lazy_static = "0.2"
libc = "0.2.21"
log = "0.4.1"
preferences = "1.1.0"
open = "1.2.1"
rand = "0.4.2"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.20"
tera = "0.11.7"

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false
